@@ -26,6 +26,8 @@
 #ifndef FTLDWARFDebugLineInfo_h
 #define FTLDWARFDebugLineInfo_h
 
+#if ENABLE(FTL_JIT)
+
 #include <wtf/Vector.h>
 #include <wtf/text/WTFString.h>
 
@@ -135,4 +137,6 @@ private:
 
 } } // namespace JSC::FTL
     
+#endif // ENABLE(FTL_JIT)
+
 #endif // FTLDWARFDebugLineInfo_h
